fix modal z-index

--- a/app/src/assets/style/main.css
+++ b/app/src/assets/style/main.css
@@ -21,6 +21,7 @@
     height: 100%;
     background-color: white;
     opacity: 70%;
+    z-index: 1;
 }
 .modal{
     position: fixed;
@@ -29,6 +30,7 @@
     transform: translate(-50%, -50%);
 
     border-radius: var(--radius-2);
+    z-index: 2;
 }
 
 .fc-scrollgrid{
